crates/loom_tests/src/snapshots/loom_tests__sema__sema_3.snap
---
source: crates/loom_tests/src/sema.rs
expression: result
---
parse::unexpected_eof

  x unexpected end of file.
   ,-[test.loom:2:9]
 1 | 
 2 |         return
   :         ^^^|^^
   :            `-- while parsing that...
 3 |         
   `----
